--- a/arch/arm64/configs/afaneh_xcoverpro_defconfig
+++ b/arch/arm64/configs/afaneh_xcoverpro_defconfig
@@ -587,12 +587,12 @@ CONFIG_CMDLINE=""
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 CONFIG_UH=y
 # CONFIG_UH_DEBUG is not set
-CONFIG_UH_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
+# CONFIG_UH_RKP is not set
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_DMAP_PROT is not set
 # CONFIG_UH_RKP_FIMC_CHECK is not set
-CONFIG_UH_LKM_BLOCK=y
+# CONFIG_UH_LKM_BLOCK is not set
 
 #
 # Userspace binary formats
@@ -1551,7 +1551,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -5473,10 +5473,10 @@ CONFIG_MST_TEEGRIS=y
 # CONFIG_MFC_LDO_COMMAND is not set
 # CONFIG_MST_LPM_DISABLE is not set
 # CONFIG_MST_LPM_CONTROL is not set
-CONFIG_INTEGRITY=y
-CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY is not set
+# CONFIG_INTEGRITY_SIGNATURE is not set
+# CONFIG_INTEGRITY_ASYMMETRIC_KEYS is not set
+# CONFIG_INTEGRITY_AUDIT is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_FIVE=y
@@ -5486,13 +5486,13 @@ CONFIG_FIVE_DEFAULT_HASH_SHA1=y
 # CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
 CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_PROCA=y
+# CONFIG_PROCA is not set
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
 CONFIG_GAF_V6=y
 CONFIG_SECURITY_DSMS=y
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
